Move admin and player commands under /invincibleconquest